# reset-free-model-free-rl

./: .gitignore  README.md  buffers.py  dqn.py  plot.py  pyproject.toml  todo.txt
environments/: Atari.py  Cartpole.py  Fourrooms.py  Gym.py  LargeRoom.py  Minatar.py  MountainCar.py  OpenRoom.py  Pinball.py  ShangtongMaze.py  TabularOpenRoom.py
environments/pinball/: env.py
environments/pinball/configs/: easy.cfg  hard.cfg  medium.cfg
